--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,7 @@
 [submodule "submodules/task_src/topological_navigation"]
 	path = submodules/task_src/topological_navigation
 	url = git@github.com:lcas/topological_navigation
+[submodule "submodules/sensors_src/rplidar_ros"]
+	path = submodules/sensors_src/rplidar_ros
+	url = git@github.com:Slamtec/rplidar_ros.git
+	branch = ros2
